--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-Project3
-<video width="1080" height="1280" controls>
+<html>
+<video width="320" height="240" controls>
   <source src="https://github.com/for-all-pc/for-all-pc.github.io/raw/main/Project-3-lvl5b.mp4" type="video/mp4">
 </video>
+</html>
